fix some alignments

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ select, input {
 }
 
 .stats {
-  margin: 0;
+  margin: 0 0 0 1em;
   padding: 0;
 }
 
